--- a/Web_Bar/Web_BarCard/BarCard/templates/list_coctail.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/list_coctail.html
@@ -6,25 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Мир Коктейлей | Список коктейлей</title>
     <link rel="stylesheet" href="{% static "css\list_coctail.css" %}">
+    <link rel="stylesheet" href="{% static "css/Base.css" %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <!-- Шапка с навигацией -->
-    <header>
-        <div class="container header-container">
-            <a href="http://127.0.0.1:8000" class="logo">
-                <i class="fas fa-cocktail"></i> Мир Коктейлей
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="http://127.0.0.1:8000" class="active"><i class="fas fa-home"></i> Главная</a></li>
-                    <li><a href="http://127.0.0.1:8000/list/IBA"><i class="fas fa-list"></i> Список IBA</a></li>
-                    <li><a href="http://127.0.0.1:8000/list"><i class="fas fa-list"></i> Список коктейлей</a></li>
-                    <li><a href="http://127.0.0.1:8000/contacts"><i class="fas fa-address-book"></i> Контакты</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    {% include "BaseHeader.html" with main="deactive" IBA="deactive" list="active" only %}
 
     <!-- Герой-секция для списка коктейлей -->
     <section class="cocktails-hero">
@@ -75,21 +62,7 @@
     </section>
 
     <!-- Подвал -->
-    <footer>
-        <div class="container footer-content">
-            <div class="footer-logo">Мир Коктейлей</div>
-            <div class="footer-links">
-                <a href="http://127.0.0.1:8000">Главная</a>
-                <a href="http://127.0.0.1:8000/list/IBA">Список IBA</a>
-                <a href="http://127.0.0.1:8000/contacts">Контакты</a>
-                <a href="#">О нас</a>
-            </div>
-            <div class="social-icons">
-                <a href="#"><i class="fab fa-vk"></i></a>
-                <a href="#"><i class="fab fa-telegram"></i></a>
-            </div>
-        </div>
-    </footer>
+    {% include "BaseFooter.html" %}
 
     <script>
         // Массив коктейлей
