Дополнен список IBA

--- a/Web_Bar/Web_BarCard/BarCard/templates/BaseHeader.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/BaseHeader.html
@@ -7,7 +7,7 @@
             <nav>
                 <ul>
                     <li><a href="http://127.0.0.1:8000" class={{main}}><i class="fas fa-home"></i> Главная</a></li>
-                    <li><a href="http://127.0.0.1:8000/IBA" class={{IBA}}><i class="fas fa-award"></i> Список IBA</a></li>
+                    <li><a href="http://127.0.0.1:8000/IBA/page-1/?type=unforgettable" class={{IBA}}><i class="fas fa-award"></i> Список IBA</a></li>
                     <li><a href="http://127.0.0.1:8000/list/page-1/" class={{list}}><i class="fas fa-list"></i> Список коктейлей</a></li>
                     <li><a href="http://127.0.0.1:8000/contacts" class={{contact}}><i class="fas fa-address-book"></i> Контакты</a></li>
                 </ul>
