--- a/Web_Bar/Web_BarCard/BarCard/templates/admin.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/admin.html
@@ -82,14 +82,14 @@
                         </label>
                         <select id="cocktailCategory" class="form-select" name="category" required>
                             <option value="">Выберите категорию</option>
-                            <option value="strong">Крепкий</option>
+                            <option value="Unforgettable">Незабываемый</option>
                             <option value="refreshing">Освежающий</option>
                             <option value="sweet">Сладкий</option>
                             <option value="sour">Кислый</option>
                             <option value="coffee">Кофейный</option>
                             <option value="non-alcoholic">Безалкогольный</option>
-                            <option value="classic">Классический</option>
-                            <option value="tropical">Тропический</option>
+                            <option value="modern">Современная классика</option>
+                            <option value="new-epoch">Новой эры</option>
                             <option value="spicy">Пряный</option>
                         </select>
                     </div>
