--- a/Web_Bar/Web_BarCard/BarCard/templates/BaseFooter.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/BaseFooter.html
@@ -2,10 +2,10 @@
                 <div class="container footer-content">
                     <div class="footer-logo">Мир Коктейлей</div>
                     <div class="footer-links">
-                        <a href="http://127.0.0.1:8000">Главная</a>
-                        <a href="http://127.0.0.1:8000/list/IBA">Список IBA</a>
-                        <a href="http://127.0.0.1:8000/contacts">Контакты</a>
-                        <a href="#">О нас</a>
+                        <a href="/">Главная</a>
+                        <a href="/IBA/page-1/?type=unforgettable">Список IBA</a>
+                        <a href="/contacts">Контакты</a>
+                        <a href="/">О нас</a>
                     </div>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-vk"></i></a>
