--- a/Web_Bar/Web_BarCard/BarCard/templates/main.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/main.html
@@ -20,7 +20,7 @@
     <div class="container">
         <h1>Искусство в каждом глотке</h1>
         <p>Откройте для себя мир изысканных вкусов и классических рецептов. От легендарных коктейлей IBA до современных миксов.</p>
-        <a href="http://127.0.0.1:8000/list" class="btn">Исследовать коктейли</a>
+        <a href="/list/page-1/?type=all&search=none" class="btn">Исследовать коктейли</a>
     </div>
 </section>
 <!-- Секция популярных коктейлей -->
