--- a/Web_Bar/Web_BarCard/BarCard/templates/admin.html
+++ b/Web_Bar/Web_BarCard/BarCard/templates/admin.html
@@ -52,28 +52,28 @@
                         <label class="form-label" for="cocktailName">
                             Название коктейля <span class="required">*</span>
                         </label>
-                        <input type="text" id="cocktailName" class="form-input" name="name" required>
+                        <input type="text" value="ondvadv" id="cocktailName" class="form-input" name="name" required>
                     </div>
 
                     <div class="form-group">
                         <label class="form-label" for="cocktailtemp">
                             Температура подачи <span class="required">*</span>
                         </label>
-                        <input type="number" id="cocktailtemp" class="form-input" name="tmre" required>
+                        <input type="number" value="46" id="cocktailtemp" class="form-input" name="tmre" required>
                     </div>
 
                     <div class="form-group">
                         <label class="form-label" for="cocktailtemp">
                             Время приготовления <span class="required">*</span>
                         </label>
-                        <input type="number" id="cocktailtemp" class="form-input" name="ctime" required>
+                        <input type="number" value="46" id="cocktailtemp" class="form-input" name="ctime" required>
                     </div>
                     
                     <div class="form-group">
                         <label class="form-label" for="cocktailStrength%">
                             Крепость в % <span class="required">*</span>
                         </label>
-                        <input type="number" id="cocktailStrength%" class="form-input" name="strengthprocent" required>
+                        <input type="number" value="46" id="cocktailStrength%" class="form-input" name="strengthprocent" required>
                     </div>
                     
                     <div class="form-group">
@@ -81,8 +81,8 @@
                             Категория <span class="required">*</span>
                         </label>
                         <select id="cocktailCategory" class="form-select" name="category" required>
-                            <option value="">Выберите категорию</option>
                             <option value="Unforgettable">Незабываемый</option>
+                            <option value="">Выберите категорию</option>
                             <option value="refreshing">Освежающий</option>
                             <option value="sweet">Сладкий</option>
                             <option value="sour">Кислый</option>
@@ -100,7 +100,7 @@
                         </label>
                         <select id="cocktailType" name="type" class="form-select">
                             <option value="classic">Классика</option>
-                            <option value="iba">Официальный IBA</option>
+                            <option value="IBA">Официальный IBA</option>
                             <option value="modern">Современный</option>
                             <option value="signature">Авторский</option>
                         </select>
@@ -130,7 +130,7 @@
                         <label class="form-label" for="cocktailImage">
                             Ссылка на изображение <span class="required">*</span>
                         </label>
-                        <input type="text" id="cocktailImage" class="form-input" name="image" required 
+                        <input type="text" value="fdwdvo" id="cocktailImage" class="form-input" name="image" required 
                                placeholder="Пина-колада, виски-сауэр, беломор и др.">
                         <div class="form-hint">Нужно указать название хранимого файла</div>
                     </div>
@@ -141,9 +141,9 @@
                         </label>
                         <div class="ingredients-container" id="ingredientsContainer">
                             <div class="ingredient-row">
-                                <input type="text" class="form-input ingredient-name" name="ingr1" placeholder="Название ингредиента">
+                                <input type="text" value="fsgdsg" class="form-input ingredient-name" name="ingr1" placeholder="Название ингредиента">
                                 <div style="display: flex; gap: 10px;">
-                                    <input type="number" class="form-input ingredient-amount" placeholder="Количество" name="count1" style="flex: 1;">
+                                    <input type="number" value="46" class="form-input ingredient-amount" placeholder="Количество" name="count1" style="flex: 1;">
                                     <button type="button" class="remove-ingredient-btn" id="remove-ingredient-btn">
                                         <i class="fas fa-times"></i>
                                     </button>
@@ -159,7 +159,7 @@
                         <label class="form-label" for="cocktailDescription">
                             Краткое описание <span class="required">*</span>
                         </label>
-                        <textarea id="cocktailDescription" name="description" class="form-textarea small" required 
+                        <textarea id="cocktailDescription" name="description" class="form-textarea small" required
                                   placeholder="Краткое описание коктейля для карточки..."></textarea>
                         <div class="form-hint">Опишите вкус, историю или особенности коктейля (максимум 200 символов)</div>
                     </div>
@@ -168,7 +168,7 @@
                         <label class="form-label" for="cocktailHistory">
                             Подробная история и описание
                         </label>
-                        <textarea id="cocktailHistory" name="history" class="form-textarea" 
+                        <textarea id="cocktailHistory" name="history" class="form-textarea"
                                   placeholder="Подробная история создания коктейля, особенности приготовления и подачи..."></textarea>
                         <div class="form-hint">Этот текст будет отображаться на странице коктейля</div>
                     </div>
@@ -177,11 +177,13 @@
                         <label class="form-label" for="cocktailInstructions">
                             Инструкция по приготовлению
                         </label>
-                        <textarea id="cocktailInstructions" name="cooking" class="form-textarea" 
+                        <textarea id="cocktailInstructions" name="cooking" class="form-textarea"
                                   placeholder="Пошаговая инструкция приготовления коктейля..."></textarea>
                         <div class="form-hint">Опишите шаги приготовления, каждый с новой строки</div>
                     </div>
-                    
+                    <div class="action" id="action">
+                        <h2>Дозаполните форму</h2>
+                    </div>
                     <div class="form-actions">
                         <button type="button" class="admin-btn primary" id="submitFormBtn" onclick=buttonform()>
                             <i class="fas fa-save"></i> Сохранить коктейль
@@ -235,12 +237,16 @@
 
         function buttonform() {
             const form = document.querySelector("form");
-            reqv = new FormData(form);
-            
-            return fetch("", {
-                method: "POST",
-                body: reqv,
-            });
+            const reqv = new FormData(form);
+            const action = document.getElementById("action");
+            if (reqv.values.length == 12 + ICCF.count*2) {
+                form.reset()
+                action.classList.add("action");
+                return fetch("", { method: "POST", body: reqv,});
+            } else {
+                action.classList.remove("action");
+            }
+
         }
         
     </script>
